--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "_schemaVersion": "3.2.0",
   "app": "tech.flecs.fence",
-  "image": "tech.flecs.fence",
+  "version": "##VERSION##",
+  "image": "flecs.azurecr.io/tech.flecs.fence",
   "provides": {
     "auth": {
       "issuer_url": "http://fence.flecs.local:27000/meta/issuer",
@@ -12,6 +13,5 @@
       "name": "Fence",
       "port": 27000
     }
-  },
-  "version": "0.1.0"
+  }
 }
