--- a/app/backend/Cargo.toml
+++ b/app/backend/Cargo.toml
@@ -17,7 +17,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.143"
 tempfile = "3.21.0"
 tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
-tower-http = { version = "0.6.6", features = ["fs"] }
+tower-http = { version = "0.6.6", features = ["fs", "cors"] }
 url = "2.5.7"
 utoipa = { version = "5.4.0", features = ["axum_extras", "debug", "openapi_extensions", "yaml", "url"] }
 uuid = { version = "1.18.1", features = ["v4"] }
